Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • intel intel
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Issues 697
    • Issues 697
    • List
    • Boards
    • Service Desk
    • Milestones
  • Analytics
    • Analytics
    • Value stream
  • Wiki
    • Wiki
  • Activity
  • Create a new issue
  • Issue Boards
Collapse sidebar
  • drm
  • intelintel
  • Issues
  • #3080
Closed
Open
Issue created Feb 14, 2021 by Miroslav Bendik@miroslav.bendik

Context reset after GPU hang (gen6) not working

After commit 9e31c1fe45d555a948ff66f1f0e3fe1f83ca63f7 (Propagate errors on awaiting already signaled fences) context reset does not work.

Steps to reproduce the issue: open complex shader (https://www.shadertoy.com/view/Ws3yW4) and wait few seconds to crash. After crash OpenGL stops working.

GPU crashes on any desktop environment or without desktop environment (EGL_PLATFORM=drm).

Video:

Command: wget https://raw.githubusercontent.com/mireq/Shadertoy-renderer/master/shadertoy.py -O shadertoy.py && python shadertoy.py download https://www.shadertoy.com/view/Ws3yW4 shader.json && python shadertoy.py render shader.json

Tested on kernels from 5.6 to drm-tip.

error.bz2

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking